--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,1 +1,113 @@
-<p>authentication works!</p>
+<div class="authentication-container d-flex h-100">
+    <div class="left-section h-100">
+        <img src="assets/images/logo/banner_2.png" height="40px" alt="ClassEra Logo">
+        <div id="recaptcha-container"></div>
+
+        <div class="action-section d-flex flex-column h-100" *ngIf="isLogin">
+            <span class="header-text">{{message.LOGIN}}</span>
+            <div class="mt-2">{{message.LOGIN_SUBTEXT}}</div>
+            <form [formGroup]="loginForm">
+                <div class="mt-4 pt-2">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>Registered contact number.</mat-label>
+                        <input matInput placeholder="xxxx xxx xxx" prefix="+91 " [maxLength]="16" autocomplete="off"
+                            mask="0000 000 000" formControlName="phoneNumber" (keydown.enter)="loginBtnClick()">
+                        <mat-hint class="error-msg"
+                            *ngIf="loginForm.get('phoneNumber')?.touched && loginForm.get('phoneNumber')?.invalid">{{getErrorMessage('phoneNumber')}}</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="isOtpSent" class="mt-4">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>One Time Password (OTP).</mat-label>
+                        <input matInput placeholder="xxxxxx" [maxLength]="6" autocomplete="off" formControlName="otp"
+                            (keydown.enter)="loginBtnClick()">
+                        <mat-hint class="error-msg"
+                            *ngIf="loginForm.get('otp')?.touched && loginForm.get('otp')?.invalid">{{getErrorMessage('otp')}}</mat-hint>
+                    </mat-form-field>
+                </div>
+            </form>
+            <button class="action-btn mt-4" mat-flat-button [disabled]="disableButtons || loginForm.invalid"
+                (click)="loginBtnClick()">{{isOtpSent ? 'Verify OTP': 'Login'}}
+            </button>
+            <div class="otp-sent-msg" *ngIf="!isOtpSent">
+                Dont have an account?<span class="change-number" (click)="createNewAccBtnClick()">
+                    Create new account.</span>
+            </div>
+            <div *ngIf="isOtpSent" class="otp-sent-msg">
+                OTP sent to +91 {{loginForm.get('phoneNumber')?.value}}.
+                <span class="change-number" (click)="updateOtpSentStatus(false)"> Change Number?</span>
+            </div>
+        </div>
+
+        <div class="action-section d-flex flex-column h-100" *ngIf="!isLogin">
+            <span class="header-text">{{message.SIGNUP}}</span>
+            <div class="mt-2">{{message.SIGNUP_SUBTEXT}}</div>
+            <form [formGroup]="signupForm" (keydown.enter)="$event.preventDefault()">
+                <div class="mt-4 pt-2" *ngIf="!isOtpSent">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>Full name.</mat-label>
+                        <input matInput placeholder="Harsh Gupta" [maxLength]="30" autocomplete="off"
+                            formControlName="fullName">
+                        <mat-hint class="error-msg"
+                            *ngIf="signupForm.get('fullName')?.touched && signupForm.get('fullName')?.invalid">Please
+                            enter a valid name.</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div class="mt-3">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>Contact number.</mat-label>
+                        <input matInput placeholder="xxxx xxx xxx" prefix="+91 " [maxLength]="16" autocomplete="off"
+                            mask="0000 000 000" formControlName="phoneNumber">
+                        <mat-hint class="error-msg"
+                            *ngIf="signupForm.get('phoneNumber')?.touched && signupForm.get('phoneNumber')?.invalid">{{getErrorMessage('phoneNumber')}}</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div class="mt-3" *ngIf="!isOtpSent">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>Access Key.</mat-label>
+                        <input matInput placeholder="ABCXXXXXXXXXX12" autocomplete="off"
+                            formControlName="accessKey" (keydown.enter)="createNewAccBtnClick()">
+                        <mat-hint class="error-msg"
+                            *ngIf="signupForm.get('accessKey')?.touched && signupForm.get('accessKey')?.invalid">{{getErrorMessage('accessKey')}}</mat-hint>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="isOtpSent" class="mt-4">
+                    <mat-form-field appearance="outline" class="w-100">
+                        <mat-label>One Time Password (OTP).</mat-label>
+                        <input matInput placeholder="xxxxxx" [maxLength]="6" autocomplete="off" formControlName="otp"
+                            (keydown.enter)="loginBtnClick()">
+                        <mat-hint class="error-msg"
+                            *ngIf="signupForm.get('otp')?.touched && signupForm.get('otp')?.invalid">{{getErrorMessage('otp')}}</mat-hint>
+                    </mat-form-field>
+                </div>
+            </form>
+            <button class="action-btn mt-3" mat-flat-button (click)="createNewAccBtnClick()"
+                [disabled]="disableButtons || signupForm.invalid">
+                {{isOtpSent ? 'Verify OTP': 'Create new account'}}
+            </button>
+            <div class="otp-sent-msg" *ngIf="!isOtpSent">
+                Already have an account?<span class="change-number" (click)="loginBtnClick()"> Login.</span>
+            </div>
+            <div *ngIf="isOtpSent" class="otp-sent-msg">
+                OTP sent to {{signupForm.get('phoneNumber')?.value}}. <span class="change-number"
+                    (click)="updateOtpSentStatus(false)"> Change Number?</span>
+            </div>
+        </div>
+
+        <div class="footer-image">
+            <img src="assets/images/banner/bottom-bg-img.png" width="100%" alt="Design banners">
+        </div>
+    </div>
+    <div class="right-section h-100">
+        <div class="align-items-center justify-content-center d-flex flex-column h-100">
+            <div class="welcome-msg1">{{isLogin?'Nice to see you again':'Reliable Gas Supply, Anytime, Anywhere!'}}</div>
+            <div class="welcome-msg2">{{isLogin?'Welcome back':isOtpSent?'Hey, '+getShortName():'Welcome'}}</div>
+            <div class="d-flex justify-content-center mt-2">
+                <img src="assets/images/banner/business-tycoons.webp" class="image-section" alt="Design banners">
+            </div>
+            <div class="footer-image">
+                <img src="assets/images/banner/bottom-bg-img.png" width="100%" alt="Design banners">
+            </div>
+        </div>
+    </div>
+</div>
