--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,37 @@
-<p>dashboard works!</p>
+<div class="dashboard-container flex-column">
+    <div class="top-navbar justify-content-between d-flex">
+        <img src="assets/images/logo/banner_2.png" height="30px" alt="ClassEra Logo" title="ClassEra India"
+            class="align-self-center">
+
+        <div class="d-flex">
+            <div class="nav-item-bar d-flex justify-content-between me-4">
+                <ng-container *ngFor="let item of menuItemList">
+                    <span *ngIf="item.visibleIn === 'top' && item.visible" class="nav-item"
+                        (click)="item.enable ? navMenuItemClicked(item.key):''"
+                        [ngClass]="{'disabled': !item.enable, 'active': item.key == activeNavMenu}">{{item.title}}</span>
+                </ng-container>
+            </div>
+
+            <div (click)="showMenuCardInfo =! showMenuCardInfo" class="profie align-self-center">
+                <img class="profile-image" title="Profile" *ngIf="!profilePicLink && adminProfileData?.male"
+                    src="assets/images/svg/profile_male.svg" alt="Male profile Image">
+                <img class="profile-image" title="Profile" *ngIf="!profilePicLink && !adminProfileData?.male"
+                    src="assets/images/svg/profile_female.svg" alt="Male profile Image">
+                <img class="profile-image" title="Profile" *ngIf="profilePicLink" [src]="profilePicLink"
+                    alt="Male profile Image" (error)="profilePicLink = undefined">
+            </div>
+            <div *ngIf="showMenuCardInfo" class="other-menu-card pb-3">
+                <ng-container *ngFor="let item of menuItemList">
+                    <div class="card-menu-item mt-2" *ngIf="item && item.visibleIn === 'side' && item.visible"
+                        (click)="navMenuItemClicked(item.key)"
+                        [ngClass]="{'disabled': !item.enable, 'active': item.key == activeNavMenu}">
+                        <span>{{item.title}}</span>
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+    </div>
+    <div class="flex-grow-1">
+        <router-outlet></router-outlet>
+    </div>
+</div>
