--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,6 +1,6 @@
 <div class="authentication-container d-flex h-100">
     <div class="left-section h-100">
-        <img src="assets/images/logo/banner_2.png" height="40px" alt="ClassEra Logo">
+        <img src="assets/images/logo/banner_2.png" height="40px" alt="Fuel Flow Logo">
         <div id="recaptcha-container"></div>
 
         <div class="action-section d-flex flex-column h-100" *ngIf="isLogin">
@@ -73,8 +73,8 @@
                 <div class="mt-3" *ngIf="!isOtpSent">
                     <mat-form-field appearance="outline" class="w-100">
                         <mat-label>Access Key.</mat-label>
-                        <input matInput placeholder="ABCXXXXXXXXXX12" autocomplete="off"
-                            formControlName="accessKey" (keydown.enter)="createNewAccBtnClick()">
+                        <input matInput placeholder="ABCXXXXXXXXXX12" autocomplete="off" formControlName="accessKey"
+                            (keydown.enter)="createNewAccBtnClick()">
                         <mat-hint class="error-msg"
                             *ngIf="signupForm.get('accessKey')?.touched && signupForm.get('accessKey')?.invalid">{{getErrorMessage('accessKey')}}</mat-hint>
                     </mat-form-field>
@@ -108,7 +108,8 @@
     </div>
     <div class="right-section h-100">
         <div class="align-items-center justify-content-center d-flex flex-column h-100">
-            <div class="welcome-msg1">{{isLogin?'Nice to see you again':'Reliable Gas Supply, Anytime, Anywhere!'}}</div>
+            <div class="welcome-msg1">{{isLogin?'Nice to see you again':'Reliable Gas Supply, Anytime, Anywhere!'}}
+            </div>
             <div class="welcome-msg2">{{isLogin?'Welcome back':isOtpSent?'Hey, '+getShortName():'Welcome'}}</div>
             <div class="d-flex justify-content-center mt-2">
                 <img src="assets/images/banner/business-tycoons.webp" class="image-section" alt="Design banners">
