--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -11,6 +11,16 @@
         min-height: 70px;
         border-bottom: 1px solid $border-light;
 
+        .search-box {
+            height: 40px;
+            max-width: 200px;
+            border-radius: 20px;
+            padding: 5px 15px;
+            border: 0px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+            outline: none;
+        }
+
         .profie {
             z-index: 2;
         }
