--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@import '../src/assets/styles/color.scss';
 
 html {
   @include mat.theme((color: (theme-type: light,
@@ -31,4 +32,16 @@ body {
 
 .bold-text {
   font-weight: bold;
+}
+
+.secondary-color {
+  color: $secondary-color;
+}
+
+.letter-spacing-1 {
+  letter-spacing: 1px;
+}
+
+.small-text {
+  font-size: 14px;
 }
