--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
         <div class="d-flex">
             <input class="search-box align-self-center" type="text" placeholder="Search customers"
-                *ngIf="activeNavMenu === 'customers' && hasCustomerData()">
+                *ngIf="activeNavMenu === 'customers' && hasCustomerData()" (input)="onSearch($event)">
 
             <div class="nav-item-bar d-flex justify-content-between me-4">
                 <ng-container *ngFor="let item of menuItemList">
