--- a/src/app/dashboard/customer/customer.component.html
+++ b/src/app/dashboard/customer/customer.component.html
@@ -8,8 +8,7 @@
                     <span class="refresh" (click)="refreshCustomerData()" title="Refresh customer list">refresh</span>.
                 </div>
             </div>
-            <div class="add-customer d-flex justify-content-center align-items-center"
-                (click)="addNewCustomer=!addNewCustomer">
+            <div class="add-customer d-flex justify-content-center align-items-center" (click)="onAddNewCustomer()">
                 <span *ngIf="!addNewCustomer" title="Add Customer">+</span>
                 <span *ngIf="addNewCustomer" title="Cancel">x</span>
             </div>
@@ -31,9 +30,13 @@
     </div>
 
     <div *ngIf="addNewCustomer" class="details-section">
-        <app-new-customer (onCancel)="addNewCustomer=false" (onSubmit)="refreshCustomerData()"></app-new-customer>
+        <app-new-customer (onCancel)="addNewCustomer=false" (onSubmit)="refreshCustomerData()"
+            [editProfileNumber]="selectedCustomer?.data?.phoneNumber" [isEditingProfile]="isEditingProfile">
+        </app-new-customer>
     </div>
     <div *ngIf="selectedCustomer && !addNewCustomer" class="details-section">
+        <app-customer-details *ngIf="selectedCustomer" [customerObject]="selectedCustomer" [userId]="userId"
+            (onProfileEdit)="onProfileEdit()"></app-customer-details>
     </div>
     <div *ngIf="!selectedCustomer && !addNewCustomer"
         class="details-section d-flex justify-content-center align-items-center flex-column">
