--- a/src/app/dashboard/new-customer/new-customer.component.html
+++ b/src/app/dashboard/new-customer/new-customer.component.html
@@ -24,16 +24,23 @@
         </div>
         <div class="mt-3">
             <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Address.</mat-label>
+                <mat-label>Customer Address.</mat-label>
                 <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off" formControlName="address"
-                    class="limit-textarea"></textarea>
+                    class="limit-textarea-1"></textarea>
+            </mat-form-field>
+        </div>
+        <div class="mt-3">
+            <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Shipping Address.</mat-label>
+                <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off" formControlName="shippingAddress"
+                    class="limit-textarea-1"></textarea>
             </mat-form-field>
         </div>
         <div class="mt-3">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Extra details</mat-label>
                 <textarea matInput placeholder="Have Good behaviour..." autocomplete="off" formControlName="extraNote"
-                    class="limit-textarea"></textarea>
+                    class="limit-textarea-2"></textarea>
             </mat-form-field>
         </div>
     </form>
