--- a/src/app/common/customer-card/customer-card.component.html
+++ b/src/app/common/customer-card/customer-card.component.html
@@ -3,7 +3,7 @@
     <div class="mt-1 letter-spacing-1 d-flex justify-content-between">
         {{getNumberInformat(data.phoneNumber)}}
         <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy Number"
-            (click)="copyData(data.phoneNumber)">
+            (click)="copyData($event, data.phoneNumber)">
     </div>
     <div *ngIf="data.address" class="mt-1 secondary-color small-text ellipsis">{{data.address}}</div>
     <div *ngIf="data.extraNote" class="secondary-color small-text ellipsis">{{data.extraNote}}</div>
