--- a/src/app/common/customer-details/customer-details.component.html
+++ b/src/app/common/customer-details/customer-details.component.html
@@ -3,14 +3,28 @@
         <span class="large-text bold-text">{{data.fullName}}</span>
         <span class="live-since medium-text secondary-color">Created {{computedData.createdOn}}</span>
     </div>
-    <div class="mt-1 align-items-center d-flex">
-        <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy Number"
+    <div class="d-flex align-items-center mt-1">
+        <span class="me-3 label-span small-text">Phone Number</span>
+        <span class="bold-text letter-spacing-1 me-2">{{getNumberInformat(data?.phoneNumber)}}</span>
+        <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy number"
             (click)="copyData(data.phoneNumber)">
-        <span class="bold-text letter-spacing-1 ms-1 me-1">{{getNumberInformat(data?.phoneNumber)}}</span>
-        <span *ngIf="data.address" class="me-1"> - {{data.address}}</span>
-        <span *ngIf="data.shippingAddress"> - {{data.shippingAddress}}</span>
     </div>
-    <div class="mt-1 small-text secondary-color" *ngIf="data.extraNote">{{data.extraNote}}</div>
+    <div class="d-flex align-items-center mt-1" *ngIf="data.address">
+        <span class="me-3 label-span small-text">Address</span>
+        <span class="bold-text letter-spacing-1 me-2">{{data.address}}</span>
+        <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy address"
+            (click)="copyData(data.address)">
+    </div>
+    <div class="d-flex align-items-center mt-1" *ngIf="data.shippingAddress">
+        <span class="me-3 label-span small-text">Shipping Address</span>
+        <span class="bold-text letter-spacing-1 me-2">{{data.shippingAddress}}</span>
+        <img src="../../../assets/images/svg/copy.svg" alt="copy" class="copy-icon" title="Copy shipping address"
+            (click)="copyData(data.shippingAddress)">
+    </div>
+    <div class="d-flex align-items-center mt-1" *ngIf="data.extraNote">
+        <span class="me-3 label-span small-text">Extra Note</span>
+        <span class="bold-text letter-spacing-1 me-2">{{data.extraNote}}</span>
+    </div>
     <div class="action-section d-flex">
         <button class="custom-btn" mat-flat-button (click)="editProfile()">Edit Profile</button>
     </div>
