--- a/src/app/dashboard/new-customer/new-customer.component.html
+++ b/src/app/dashboard/new-customer/new-customer.component.html
@@ -1,9 +1,10 @@
 <div class="new-customer-container">
     <div class="heading bold-text">Add New Customer</div>
     <div>Please provide the following customer details.</div>
+    <div class="mt-1 small-text secondary-color">Customer ID: {{customerId}}</div>
 
     <form [formGroup]="customerForm" class="customer-form">
-        <div class="mt-4 pt-2">
+        <div class="mt-3 pt-2">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Name</mat-label>
                 <input matInput placeholder="Harsh Gupta" [maxLength]="30" autocomplete="off"
@@ -32,8 +33,8 @@
         <div class="mt-3">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Shipping Address.</mat-label>
-                <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off" formControlName="shippingAddress"
-                    class="limit-textarea-1"></textarea>
+                <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
+                    formControlName="shippingAddress" class="limit-textarea-1"></textarea>
             </mat-form-field>
         </div>
         <div class="mt-3">
