--- a/src/app/dashboard/new-customer/new-customer.component.scss
+++ b/src/app/dashboard/new-customer/new-customer.component.scss
@@ -27,6 +27,11 @@
             color: $primary-web-red;
         }
 
+        .custom-btn{
+            font-family: "Comfortaa", serif;
+            border-radius: 5px;
+        }
+
         .cancel-btn {
             background-color: #e3e3e4;
             color: $primary-web-dark;
