Added fire icon near logo

--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -1,5 +1,6 @@
 <div class="authentication-container d-flex h-100">
     <div class="left-section h-100">
+        <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2 fire-icon">
         <img src="assets/images/logo/banner_2.png" height="40px" alt="Fuel Flow Logo">
         <div id="recaptcha-container"></div>
 
