--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -10,6 +10,10 @@
         padding-left: 60px;
         padding-right: 60px;
 
+        .fire-icon {
+            margin-left: -10px;
+        }
+
         .action-section {
             margin-top: -50px;
             justify-content: center;
