--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="dashboard-container flex-column">
     <div class="top-navbar justify-content-between d-flex">
-        <img src="assets/images/logo/banner_2.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India"
-            class="align-self-center">
+        <div class="align-self-center fire-icon">
+            <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2">
+            <img src="assets/images/logo/banner_2.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India">
+        </div>
 
         <div class="d-flex">
             <input class="search-box align-self-center" type="text" placeholder="Search customers"
