data table will be now horizontal scroll if width is less and table wint fit

--- a/src/app/common/data-table/data-table.component.scss
+++ b/src/app/common/data-table/data-table.component.scss
@@ -33,6 +33,10 @@
         }
     }
 
+    .table-div {
+        overflow-y: auto;
+    }
+
     .custom-table {
         .custom-header-row {
             background-color: $border-light;
