--- a/src/app/common/data-table/data-table.component.html
+++ b/src/app/common/data-table/data-table.component.html
@@ -24,21 +24,22 @@
         </app-new-entry>
     </div>
 
-    <table *ngIf="processedTableData && processedTableData.length>0" mat-table [dataSource]="processedTableData"
-        class="custom-table">
-        <tr mat-header-row *matHeaderRowDef="displayedColumns()" class="custom-header-row nowrap"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns();" class="custom-row"></tr>
+    <div class="w-100 table-div">
+        <table *ngIf="processedTableData && processedTableData.length>0" mat-table [dataSource]="processedTableData"
+            class="custom-table">
+            <tr mat-header-row *matHeaderRowDef="displayedColumns()" class="custom-header-row nowrap"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns();" class="custom-row"></tr>
 
-        <ng-container *ngFor="let column of tableStructure" [matColumnDef]="column.key">
-            <th mat-header-cell *matHeaderCellDef class="custom-header-cell" [ngClass]="column.customClass">
-                {{column.label}}</th>
-            <td mat-cell *matCellDef="let value" class="custom-mat-cell" [ngClass]="column.customClass">
-                <ng-container
-                    *ngTemplateOutlet="getTemplate(column.dataType); context: {$implicit: value, column: column}"></ng-container>
-            </td>
-        </ng-container>
-
-    </table>
+            <ng-container *ngFor="let column of tableStructure" [matColumnDef]="column.key">
+                <th mat-header-cell *matHeaderCellDef class="custom-header-cell" [ngClass]="column.customClass">
+                    {{column.label}}</th>
+                <td mat-cell *matCellDef="let value" class="custom-mat-cell" [ngClass]="column.customClass">
+                    <ng-container
+                        *ngTemplateOutlet="getTemplate(column.dataType); context: {$implicit: value, column: column}"></ng-container>
+                </td>
+            </ng-container>
+        </table>
+    </div>
 
     <div *ngIf="(!processedTableData || processedTableData.length === 0) && !addNewEntry"
         class="no-data d-flex justify-content-center align-items-center flex-column">
