--- a/src/app/common/data-table/data-table.component.scss
+++ b/src/app/common/data-table/data-table.component.scss
@@ -10,9 +10,14 @@
             padding: 15px 20px 10px 20px;
             border-radius: 10px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+            box-sizing: border-box;
 
             &:hover {
                 background-color: $border-very-light;
+            }
+
+            &.danger {
+                border-bottom: 3px solid $primary-web-red;
             }
         }
 
