--- a/src/app/dashboard/new-customer/new-customer.component.scss
+++ b/src/app/dashboard/new-customer/new-customer.component.scss
@@ -27,7 +27,8 @@
             color: $primary-web-red;
         }
 
-        .custom-btn{
+        .custom-btn {
+            min-width: 150px;
             font-family: "Comfortaa", serif;
             border-radius: 5px;
         }
