--- a/src/app/dashboard/new-entry/new-entry.component.html
+++ b/src/app/dashboard/new-entry/new-entry.component.html
@@ -7,8 +7,9 @@
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Date</mat-label>
-                    <input matInput placeholder="DD/MM/YYYY" [maxLength]="10" autocomplete="off" formControlName="date"
-                        mask="99/99/9999">
+                    <input matInput [matDatepicker]="picker" formControlName="date">
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
             </div>
             <div class="pt-2 box-input">
@@ -75,6 +76,10 @@
     <div class="mt-3 justify-content-between d-flex customer-form">
         <button mat-flat-button (click)="onSaveClick()" class="custom-btn" [disabled]="disableSave">Save Entry
             Details</button>
-        <button mat-flat-button (click)="onCancelClick()" class="custom-btn cancel-btn">Cancel</button>
+        <div>
+            <button mat-flat-button (click)="onDeleteClick()" *ngIf="isEditing"
+                class="custom-btn cancel-btn me-3">Delete</button>
+            <button mat-flat-button (click)="onCancelClick()" class="custom-btn cancel-btn">Cancel</button>
+        </div>
     </div>
 </div>
