added entry detail viewing model popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-entry-detail></app-entry-detail>
 <app-confirmation-model></app-confirmation-model>
 <app-notification></app-notification>
 <router-outlet></router-outlet>
