--- a/src/app/common/entry-detail/entry-detail.component.scss
+++ b/src/app/common/entry-detail/entry-detail.component.scss
@@ -16,6 +16,9 @@
 
     .model-box {
         width: 50%;
+        max-height: 95%;
+        overflow-y: auto;
+
         background-color: white;
         border-radius: 20px;
         padding: 20px 30px 20px 30px;
@@ -45,7 +48,7 @@
 
         .label {
             font-weight: bold;
-            min-width: 25%;
+            min-width: 30%;
         }
 
         .data {
