added delivery person page

--- a/src/app/common/user-card/user-card.component.html
+++ b/src/app/common/user-card/user-card.component.html
@@ -1,4 +1,4 @@
-<div class="customer-card-container" [ngClass]="{'active':selected}">
+<div class="user-card-container" [ngClass]="{'active':selected}">
     <div class="bold-text">{{data.fullName}}</div>
     <div class="mt-1 letter-spacing-1 d-flex justify-content-between">
         {{getNumberInformat(data.phoneNumber)}}
