--- a/src/assets/styles/color.scss
+++ b/src/assets/styles/color.scss
@@ -9,6 +9,7 @@ $dark-color: #212529;
 
 $border-light: #dfdfdf;
 $border-very-light: #f3f3f6;
+$border-very-light2: #e8e8ec;
 
 $primary-mat-color: #1469c0;
 
