renamed customer detail to user detail and necessary changes

--- a/src/app/common/user-details/user-details.component.html
+++ b/src/app/common/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<div class="customer-details-container">
+<div class="user-details-container">
     <div class="d-flex align-items-top justify-content-between">
         <span class="large-text bold-text">{{data.fullName}}</span>
         <span class="live-since medium-text secondary-color">Created {{computedData.createdOn}}</span>
