--- a/src/app/common/user-details/user-details.component.scss
+++ b/src/app/common/user-details/user-details.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/color.scss';
 
-.customer-details-container {
+.user-details-container {
     padding: 40px 50px 20px 50px;
     position: relative;
 
