--- a/src/app/dashboard/new-account/new-account.component.scss
+++ b/src/app/dashboard/new-account/new-account.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/styles/color.scss';
 
-.new-customer-container {
+.new-user-container {
     padding: 30px 0px 40px 40px;
 
     .heading {
@@ -19,7 +19,7 @@
         }
     }
 
-    .customer-form {
+    .user-form {
         max-width: 800px;
 
         .error-msg {
