--- a/src/app/dashboard/customer/customer.component.html
+++ b/src/app/dashboard/customer/customer.component.html
@@ -31,9 +31,9 @@
     </div>
 
     <div *ngIf="addNewCustomer" class="details-section">
-        <app-new-customer (onCancel)="addNewCustomer=false" (onSubmit)="refreshCustomerData()"
+        <app-new-account (onCancel)="addNewCustomer=false" (onSubmit)="refreshCustomerData()" userType="customer"
             [editProfileId]="selectedCustomer?.data?.userId" [isEditingProfile]="isEditingProfile">
-        </app-new-customer>
+        </app-new-account>
     </div>
     <div *ngIf="selectedCustomer && !addNewCustomer" class="details-section d-flex flex-column">
         <app-user-details *ngIf="selectedCustomer" [userObject]="selectedCustomer" [userId]="userId"
