--- a/src/app/dashboard/delivery-person/delivery-person.component.scss
+++ b/src/app/dashboard/delivery-person/delivery-person.component.scss
@@ -30,6 +30,21 @@
                     cursor: pointer;
                 }
             }
+
+            .add-delivery-boy {
+                height: 24px;
+                min-width: 24px;
+                margin-right: 25px;
+                font-size: 20px;
+                background-color: $border-very-light;
+                border-radius: 6px;
+                box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+
+                &:hover {
+                    cursor: pointer;
+                    background-color: $border-light;
+                }
+            }
         }
 
         .delivery-person-list {
