--- a/src/app/dashboard/new-account/new-account.component.html
+++ b/src/app/dashboard/new-account/new-account.component.html
@@ -1,16 +1,16 @@
-<div class="new-customer-container">
-    <div class="heading bold-text">Add New Customer</div>
-    <div>Please provide the following customer details.</div>
-    <div class="mt-1 small-text secondary-color">Customer ID: {{customerId}}</div>
+<div class="new-user-container">
+    <div class="heading bold-text">Add New {{userLabel}}</div>
+    <div>Please provide the following account details.</div>
+    <div class="mt-1 small-text secondary-color">{{userLabel}} ID: {{accountId}}</div>
 
-    <form [formGroup]="customerForm" class="customer-form">
+    <form [formGroup]="accountForm" class="user-form">
         <div class="mt-3 pt-2">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Name</mat-label>
                 <input matInput placeholder="Harsh Gupta" [maxLength]="30" autocomplete="off"
                     formControlName="fullName">
                 <mat-hint class="error-msg"
-                    *ngIf="customerForm.get('fullName')?.touched && customerForm.get('fullName')?.invalid">
+                    *ngIf="accountForm.get('fullName')?.touched && accountForm.get('fullName')?.invalid">
                     Please enter a valid name.</mat-hint>
             </mat-form-field>
         </div>
@@ -20,17 +20,17 @@
                 <input matInput placeholder="xxxx xxx xxx" prefix="+91 " [maxLength]="16" autocomplete="off"
                     mask="0000 000 000" formControlName="phoneNumber">
                 <mat-hint class="error-msg"
-                    *ngIf="customerForm.get('phoneNumber')?.touched && customerForm.get('phoneNumber')?.invalid">{{getErrorMessage('phoneNumber')}}</mat-hint>
+                    *ngIf="accountForm.get('phoneNumber')?.touched && accountForm.get('phoneNumber')?.invalid">{{getErrorMessage('phoneNumber')}}</mat-hint>
             </mat-form-field>
         </div>
         <div class="mt-3">
             <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Customer Address.</mat-label>
+                <mat-label>{{userLabel}} Address.</mat-label>
                 <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off" formControlName="address"
                     class="limit-textarea-1"></textarea>
             </mat-form-field>
         </div>
-        <div class="mt-3">
+        <div class="mt-3" *ngIf="userType === 'customer'">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Shipping Address.</mat-label>
                 <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
@@ -45,9 +45,9 @@
             </mat-form-field>
         </div>
     </form>
-    <div class="mt-3 justify-content-between d-flex customer-form">
-        <button mat-flat-button (click)="saveCustomerData()" class="custom-btn"
-            [disabled]="disableSave || customerForm.invalid">Save</button>
+    <div class="mt-3 justify-content-between d-flex user-form">
+        <button mat-flat-button (click)="saveAccountData()" class="custom-btn"
+            [disabled]="disableSave || accountForm.invalid">Save</button>
         <button class="cancel-btn custom-btn" mat-flat-button (click)="cancelClicked()"
             [disabled]="disableSave">Cancel</button>
     </div>
